# opie

./: .coveragerc  CONTRIBUTING.md  CONTRIBUTING.rst  Deployment.md  HACKING.md  HACKING.rst  README.md  README.rst  SUMMARY.md  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
browser/data/json/: https:__api.github.com_repos_indigo-dc_opie_issues-its-rep-evolutionary.json  https:__api.github.com_repos_indigo-dc_opie_issues-its-rep-static.json  https:__github.com_indigo-dc_opie-pullpo-rep-static.json  its-evolutionary.json  its-people.json  its-rep-all-evolutionary.json  its-rep-all-static.json  its-repos.json  its-static.json  its-top.json  opie-scm-rep-evolutionary.json  opie-scm-rep-static.json  people-ae83d408ac6b07f619d5149bc7e785508182b394-its-evolutionary.json  people-ae83d408ac6b07f619d5149bc7e785508182b394-its-static.json  people-ae83d408ac6b07f619d5149bc7e785508182b394-pullpo-evolutionary.json  people-ae83d408ac6b07f619d5149bc7e785508182b394-pullpo-static.json  people-ae83d408ac6b07f619d5149bc7e785508182b394-scm-evolutionary.json  people-ae83d408ac6b07f619d5149bc7e785508182b394-scm-static.json  people-fb45cbe8131be00cc5238698b74641cb3fd1e480-its-evolutionary.json  people.json  scm-repos.json  (+14 more)
doc/source/: conf.py  configuration.rst  index.rst  installation.rst  usage.rst
etc/: opie-config-generator.conf
extras/: nova.patch
opie/: __init__.py  config.py  opts.py
opie/scheduler/: filter_scheduler.py  host_manager.py
opie/tests/: test_api.py  test_hostmanager.py  test_opie.py  test_scheduler.py  test_weighers.py
templates/common/: navbar.tmpl
(+7 files in other folders)
