[metadata]
name = opie
summary = OPIE: OpenStack Preemptible Instances Extensions
description-file =
    README.rst
author = Alvaro Lopez Garcia
author-email = aloga@ifca.unican.es
home-page = https://github.org/alvarolopez/opie
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3

[files]
packages =
    opie

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = opie/locale
domain = opie

[update_catalog]
domain = opie
output_dir = opie/locale
input_file = opie/locale/opie.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = opie/locale/opie.pot
